--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
                 <label for="plaintextEnc">Plaintext to Encrypt:</label>
                 <input type="text" id="plaintextEnc" placeholder="Paste here the message to encrypt...">
 
+                <div class="checkbox-container">
+                    <input type="checkbox" id="usePQ">
+                    <label for="usePQ">Use post-quantum cryptography</label>
+                    <br><br>
+                </div>
+                
                 <button id="encryptButton" disabled>Encrypt Message</button>
 
                 <p id="resultMessageEnc" style="white-space: pre;"></p>
