--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div id="main-menu" class="submenu visible">
                 <h1>Hive-Mail</h1>
 
-                <p class="subtitle">This tool allows you to encrypt and decrypt messages, using public keys saved in the metadata of Hive accounts</p>
+                <p class="subtitle">This tool allows you to encrypt and decrypt messages, using special public keys saved in the metadata of Hive accounts</p>
 
                 <p class="disclaimer">The security offered by this tool is dependent on your ability to securely store your Hive-Mail Private Key. Make sure to use a good password manager to keep your key safe!</p>
 
