--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
                 <br>
 
-                <button data-menu="genKeyPage" class="orange">Add or Change your Hive-Mail Key</button>
+                <button data-menu="genKeyPage" class="orange">Create or Change your Hive-Mail Key</button>
                 <button data-menu="encryptPage">Encrypt Message</button>
                 <button data-menu="decryptPage">Decrypt Message</button>
                 <button data-menu="removePage" class="red">Remove Hive-Mail Key from your account</button>
@@ -34,7 +34,7 @@
             </div>
 
             <div id="genKeyPage-content" class="submenu">
-                <h1>Add or Change a Hive-Mail Key to your Hive account</h1>
+                <h1>Add a Hive-Mail Key to your Hive account, or change your current Key</h1>
 
                 <p class="subtitle">This page can be used to generate a new Hive-Mail Key Pair, which is used to encrypt and decrypt messages</p>
 
